--- a/iiot/taoyuang1000/join-tycg/css/style.css
+++ b/iiot/taoyuang1000/join-tycg/css/style.css
@@ -78,6 +78,9 @@ a:hover { text-decoration: none; }
 
 .btn-default{ cursor: pointer; min-width: 180px; color: #fff; background-color: #EF6079; border-radius:50px; height: 44px; line-height: 42px; font-size: 17px; display: inline-block; margin: 10px 0;}
 .btn-default:hover{ opacity: .9; }
+.btn-disabled { cursor: no-drop!important; background-color: lightgray!important;}
+.btn-disabled:hover{ opacity: 1; }
+
 .btn-out{ background-color: #ec759c; display: block; margin: 0 auto; }
 .btn-linelogin{ border-radius: 5px; text-indent: 35px; width: 100%; height: 44px; line-height: 44px; max-width: 300px; background: url(../images/line-brands.svg) 10px center no-repeat #06C755; }
 
@@ -85,6 +88,7 @@ a:hover { text-decoration: none; }
 .edit-userinfo .field{ width: 100%; text-align: left; padding: 5px 0;}
 .edit-userinfo .field .bg-field{ background-color: #fff; border-radius: 50px; position: relative; padding-left: 45px; border: 2px solid #fff; width: 100%; min-height: 40px; display: block; }
 .edit-userinfo .field .bg-field::after{ content: ""; position: absolute; left: 4px; top: 0px; pointer-events: none; width: 40px; height: 38px; display: block; visibility: visible;}
+.edit-userinfo .field .bg-field p.text-must{ position: absolute; right: 15px; color: #EB5757; top:calc(50% - 9.5px); font-size: 13px;}
 
 .edit-userinfo .field .r-input{ width: 100%;}
 
