--- a/iiot/taoyuang1000/linetaxi/mobilemenu/pushy.css
+++ b/iiot/taoyuang1000/linetaxi/mobilemenu/pushy.css
@@ -26,7 +26,7 @@
   margin-top: 20px;
 } */
 .pushy ul li a {
-  padding-left: 20px;
+  /* padding-left: 20px; */
 }
 .pushy.pushy-left {
   left: 0;
