--- a/iiot/taoyuang1000/queen/css/style.scss
+++ b/iiot/taoyuang1000/queen/css/style.scss
@@ -544,6 +544,25 @@ a.gotop {
       }
     }
     .info {
+      position: relative;
+      .finish{
+        z-index: 1;
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(255, 255, 255, 0.753);
+        display: -webkit-flex;
+        display: flex;
+        -webkit-align-items: center;
+        align-items: center;
+        -webkit-justify-content: center;
+        justify-content: center;
+        img{
+          max-width: 35%;
+        }
+      }
       p {
         font-size: 16px;
         color: #333;
