--- a/iiot/taoyuang1000/queen/css/style.css
+++ b/iiot/taoyuang1000/queen/css/style.css
@@ -561,6 +561,7 @@ a.gotop {
   .middle-container .main-container h3.sub-title {
     font-size: 18px;
     width: 95%;
+    left: 2.5%;
   }
 }
 
@@ -1047,6 +1048,78 @@ a.gotop {
   .middle-container .text-remark {
     max-width: 75%;
     margin: 0 auto;
+  }
+}
+
+.middle-container .step-box {
+  max-width: 100%;
+}
+
+.middle-container .step-box img {
+  width: 100%;
+}
+
+.middle-container .step-box img.mob {
+  display: none;
+}
+
+.middle-container .step-box ul {
+  position: relative;
+  padding: 10px;
+  width: 100%;
+}
+
+.middle-container .step-box ul li {
+  position: relative;
+  width: 25%;
+  float: left;
+}
+
+.middle-container .step-box ul li::after {
+  content: "";
+  position: absolute;
+  width: 20px;
+  height: 24px;
+  display: block;
+  background: url(../images/arr-pink.png) center center no-repeat;
+  background-size: contain;
+  bottom: calc( 50% - 12px);
+  left: -10px;
+  z-index: 1;
+}
+
+.middle-container .step-box ul li:first-child::after, .middle-container .step-box ul li:nth-child(2)::after {
+  display: none;
+}
+
+.middle-container .step-box ul li.top-title {
+  width: 100%;
+  text-align: center;
+}
+
+.middle-container .step-box ul li.top-title img {
+  width: 65%;
+  max-width: 600px;
+  display: inline-block;
+}
+
+.middle-container .step-box ul li.top-title::after {
+  display: none;
+}
+
+@media all and (max-width: 750px) {
+  .middle-container .step-box ul li {
+    width: 50%;
+    padding-left: 15px;
+  }
+  .middle-container .step-box ul li.top-title img {
+    width: 100%;
+  }
+  .middle-container .step-box ul li:nth-child(2)::after {
+    display: block;
+  }
+  .middle-container .step-box ul li::after {
+    left: 10px;
   }
 }
 
