--- a/iiot/taoyuang1000/queen/css/style.scss
+++ b/iiot/taoyuang1000/queen/css/style.scss
@@ -297,6 +297,7 @@ a.gotop {
       @media all and (max-width: 900px) {
         font-size: 18px;
         width: 95%;
+        left: 2.5%;
       }
       @media all and (max-width: 600px) {
         line-height: 24px;
@@ -711,6 +712,78 @@ a.gotop {
       .text-remark{
         max-width: 75%;
         margin: 0 auto;
+      }
+    }
+    .step-box {
+      max-width: 100%;
+      img {
+        width: 100%;
+    
+        &.mob {
+          display: none;
+        }
+      }
+    
+      ul {
+        position: relative;
+        padding:10px;
+        width: 100%;
+        li {
+          position: relative;
+          width: 25%;
+          float: left;
+          &::after {
+            content: "";
+            position: absolute;
+            width: 20px;
+            height: 24px;
+            display: block;
+            background: url(../images/arr-pink.png) center center no-repeat;
+            background-size: contain;
+            bottom:calc( 50% - 12px);
+            left: -10px;
+            z-index: 1;
+          }
+    
+          &:first-child::after,
+          &:nth-child(2)::after {
+            display: none;
+          }
+    
+          &.top-title {
+            width:100%;
+            text-align: center;
+            img{
+              width: 65%;
+              max-width: 600px;
+              display: inline-block;
+            }
+            &::after {
+              display: none;
+            }
+          }
+        }
+      }
+    
+
+      @media all and (max-width: 750px) {
+        ul {
+          li {
+            width: 50%;
+            padding-left: 15px;
+            &.top-title {
+              img{
+                width: 100%;
+              }
+            }
+            &:nth-child(2)::after {
+              display: block;
+            }
+            &::after {
+              left: 10px;
+            }
+          }
+        }
       }
     }
   }
