--- a/iiot/taoyuang1000/join-tycg/css/style.css
+++ b/iiot/taoyuang1000/join-tycg/css/style.css
@@ -71,7 +71,7 @@ a:hover { text-decoration: none; }
 .landing p.text-forget a{ color: #828282; }
 .landing p.text-forget a:hover{ text-decoration: underline;}
 
-.landing p.text-or{ color: #a0a0a0; padding: 40px 0;}
+.landing p.text-or{ color: #a0a0a0; padding: 30px 0;}
 .landing p.text-or span{ position: relative; }
 .landing p.text-or span::after, .landing p.text-or span::before{ content: ""; position: absolute; left: -70px; top:50%; width: 40px; height: 1px; background-color: #BDBDBD;  }
 .landing p.text-or span::before{ left: initial; right: -70px; }
@@ -173,6 +173,14 @@ a:hover { text-decoration: none; }
 	.landing ul.link li p{display: inline-block; }
 	.landing .privacy-content p{ font-size: 13px;}
 	.top-notes ul li{ font-size: 12px; }
+}
+@media (max-width:400px) {
+	.logo{ height: 84px; }
+	.btn-default{ min-width: 150px;}	
+	.landing .logo{ margin-top: 2vh; }
+	.landing p.text-forget{padding: 10px 0;}
+	.landing p.text-or{padding: 20px 0;}		
+	.edit-userinfo{padding: 15px 0;}
 }
 @media (max-width:320px) {
 	.btn-linelogin{ text-indent: 30px; height: 35px; line-height: 35px; max-width: 240px; }
