--- a/iiot/taoyuang1000/join-tycg/css/style.css
+++ b/iiot/taoyuang1000/join-tycg/css/style.css
@@ -19,6 +19,7 @@ p { font-size: 16px; }
 a { cursor: pointer; text-decoration: none; outline: none; transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms; }
 a:hover { text-decoration: none; }
 *:link, *:visited, *:hover, *:active, *:focus, * { border: none; outline: none; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; }
+input:-webkit-autofill { box-shadow: 0 0 0px 1000px white inset !important;}
 
 /*===== start ======*/
 .the-select { position: relative; display: block;}
@@ -129,7 +130,7 @@ a:hover { text-decoration: none; }
 .edit-userinfo .field .for-verify::after{ background: url(../images/lock-solid.svg) center center no-repeat; background-size: 31%;}
 
 
-.edit-userinfo .field input{ background:none;appearance:none;-moz-appearance:none; -webkit-appearance:none; background-color: transparent; width: 100%; line-height: 38px; height: 38px;}
+.edit-userinfo .field input{ background:none;appearance:none;-moz-appearance:none; -webkit-appearance:none; background-color: transparent; text-align: left; width: 100%; line-height: 38px; height: 38px;}
 .edit-userinfo .field input::placeholder{ color: #BDBDBD;}
 
 .edit-userinfo .field .for-error{ border-color: #F2994A; }
