--- a/iiot/taoyuang1000/game-turntable/css/style.scss
+++ b/iiot/taoyuang1000/game-turntable/css/style.scss
@@ -1,33 +1,8 @@
 @import "../css/reset.scss";
-$radius-l: 50px;
-$radius-m: 28px;
-$radius-s: 10px;
 
-$f-size-xxl: 1.875rem; //30px
-$f-size-xl: 1.25rem; //20px
-$f-size-l: 0.938rem; //15px
-$f-size-m: 0.875rem; //14px
-$f-size-s: 0.813rem; //13px
-$f-size-ss: 0.688rem; //11px
-
-@keyframes scaleDraw {
-  0% {
-    transform: scale(1); /*開始為原始大小*/
-  }
-  25% {
-    transform: scale(1.1); /*放大1.1倍*/
-  }
-  50% {
-    transform: scale(1);
-  }
-  75% {
-    transform: scale(1.1);
-  }
-}
 @mixin has-box-shadow {
   box-shadow: rgba(rgba(0, 0, 0, 0.2), 0.16) 0px 3px 6px;
 }
-
 // header
 .header-container {
   width: 100%;
@@ -58,7 +33,7 @@ $f-size-ss: 0.688rem; //11px
     border-radius: 0 0 50% 50%;
     left: 0;
     visibility:visible;
-    @include has-box-shadow;
+    box-shadow: rgba(rgba(0, 0, 0, 0.2), 0.10) 4px 6px 8px;
   }
 }
 
@@ -102,22 +77,14 @@ $f-size-ss: 0.688rem; //11px
           content: "";
           position: absolute;
           left: calc(50% - 12.5px);
-          top: 4px;
+          top:2px;
           width: 0;
             height: 0;
             border-style: solid;
             border-width: 20px 12.5px 0 12.5px;
             border-color: #eb6077 transparent transparent transparent;
         }
-      }
-      ul{
-        background-color: #fff;
-        width: 240px;
-        height: 240px;
-        border-radius:200px;
-        position: relative;
-        overflow: hidden;
-        &::after{ 
+        &::before{ 
           content:"";
           position: absolute;
           width: 60px;
@@ -128,7 +95,16 @@ $f-size-ss: 0.688rem; //11px
           background-size: 85%;
           left: calc(50% - 30px);
           top:calc(50% - 30px);
+          z-index: 1;
         }
+      }
+      ul{
+        background-color: #fff;
+        width: 240px;
+        height: 240px;
+        border-radius:200px;
+        position: relative;
+        overflow: hidden;
         li{
           width: 99.4px;
           height: 120px;
@@ -151,7 +127,7 @@ $f-size-ss: 0.688rem; //11px
               line-height: 24px;
               &.icon {
                 position: relative;
-                padding-top: 15px;
+                padding-top: 25px;
                 &::after{
                   position: absolute;
                   content: "";
@@ -163,7 +139,7 @@ $f-size-ss: 0.688rem; //11px
                   background: url(../images/img-TC-card.svg) center center no-repeat #ffa1b1;
                   background-size: 85%;
                   left: calc(50% - 15px);
-                  top:10px;
+                  top:15px;
                 }
               }
           }
